// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter should render 1`] = `
<Action
  bsStyle="link"
  className="navbar-right"
  disabled={false}
  hideLabel={true}
  icon="talend-search"
  id={undefined}
  inProgress={false}
  label="Toggle filter"
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseOver={[Function]}
  role={null}
  type="button"
>
  <svg
    aria-hidden="true"
    className="tc-svg-icon"
    focusable="false"
    title={null}
  >
    <use
      xlinkHref="#talend-search"
    />
  </svg>
</button>
  tooltipPlacement="top"
/>
`;

exports[`Filter should render filter input with default placeholder 1`] = `
<form
  className="navbar-form navbar-right"
  onSubmit={[Function]}
  role="search"
>
  <Icon
    className={undefined}
    name="talend-search"
  />
  <div
    className="form-group"
  >
    <FilterInput
      debounceMinLength={undefined}
      debounceTimeout={undefined}
      id={undefined}
      onBlur={undefined}
      onFilter={undefined}
      onFocus={undefined}
      onToggle={undefined}
      placeholder="Filter"
      value={undefined}
    />
    <Action
      bsStyle="link"
      disabled={false}
      hideLabel={true}
      icon="talend-cross"
      id={undefined}
      inProgress={false}
      label="Remove filter"
      onClick={undefined}
      tooltipPlacement="top"
    />
  </div>
</form>
`;

exports[`Filter should render filter input with given placeholder 1`] = `
<form
  className="navbar-form navbar-right"
  onSubmit={[Function]}
  role="search"
>
  <Icon
    className={undefined}
    name="talend-search"
  />
  <div
    className="form-group"
  >
    <FilterInput
      debounceMinLength={undefined}
      debounceTimeout={undefined}
      id={undefined}
      onBlur={undefined}
      onFilter={undefined}
      onFocus={undefined}
      onToggle={undefined}
      placeholder="find something"
      value={undefined}
    />
    <Action
      bsStyle="link"
      disabled={false}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOver={[Function]}
      role={null}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="tc-svg-icon"
        focusable="false"
        title={null}
      >
        <use
          xlinkHref="#talend-cross"
        />
      </svg>
    </button>
  </div>
</form>
`;

exports[`Filter should render highlighted filter 1`] = `
<Action
  bsStyle="link"
  className="navbar-right"
  disabled={false}
  hideLabel={true}
  icon="talend-search"
  id={undefined}
  inProgress={false}
  label="Toggle filter"
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOver={[Function]}
  role={null}
  type="button"
>
  <svg
    aria-hidden="true"
    className="tc-svg-icon"
    focusable="false"
    title={null}
  >
    <use
      xlinkHref="#talend-search"
    />
  </svg>
</button>
`;

exports[`Filter should render id if provided 1`] = `
<Action
  bsStyle="link"
  className="navbar-right"
  disabled={false}
  hideLabel={true}
  icon="talend-search"
  id="toolbar-filter"
  inProgress={false}
  label="Toggle filter"
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOver={[Function]}
  role={null}
  type="button"
>
  <svg
    aria-hidden="true"
    className="tc-svg-icon"
    focusable="false"
    title={null}
  >
    <use
      xlinkHref="#talend-search"
    />
  </svg>
</button>
`;

exports[`Filter should render only toggle icon 1`] = `
<Action
  bsStyle="link"
  className="navbar-right"
  disabled={false}
  hideLabel={true}
  icon="talend-search"
  id={undefined}
  inProgress={false}
  label="Toggle filter"
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOver={[Function]}
  role={null}
  type="button"
>
  <svg
    aria-hidden="true"
    className="tc-svg-icon"
    focusable="false"
    title={null}
  >
    <use
      xlinkHref="#talend-search"
    />
  </svg>
</button>
`;
